--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-form": "^8.2.2",
     "axios": "^0.19.0",
+    "formik": "^2.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
