--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
   "private": true,
   "homepage": "https://1dev3pl.github.io/First-app/",
   "dependencies": {
-    "@types/jest": "^25.1.3",
-    "@types/node": "^13.7.4",
-    "@types/react": "^16.9.21",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/redux-form": "^8.2.2",
-    "axios": "^0.19.0",
-    "formik": "^2.1.5",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^13.13.28",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/redux-form": "^8.3.0",
+    "antd": "^4.7.3",
+    "axios": "^0.19.2",
+    "colorette": "^1.2.1",
+    "formik": "^2.2.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.0",
-    "redux": "^4.0.4",
-    "redux-form": "^8.2.6",
+    "react-scripts": "^3.4.4",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,8 +50,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-test-renderer": "^16.9.2",
-    "gh-pages": "^2.1.1",
-    "react-test-renderer": "^16.8.6"
+    "@types/react-test-renderer": "^16.9.3",
+    "gh-pages": "^2.2.0",
+    "react-test-renderer": "^16.14.0"
   }
 }
